# Fractpp

./: README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/francescoz/fractppbench/: MainActivity.java
app/src/main/res/values/: strings.xml
fractpp/: build.gradle
fractpp/src/cpp/: CMakeLists.txt
fractpp/src/cpp/headers/: coordinator.hpp  debug.hpp  jnibridge.hpp  renderer.hpp  time.hpp
fractpp/src/cpp/headers/async/: async.hpp  sync.hpp  task.hpp  tasker.hpp  thread.hpp
fractpp/src/cpp/sources/: coordinator.cpp  jnibridge.cpp  renderer.cpp  time.cpp
fractpp/src/cpp/sources/async/: sync.cpp  task.cpp  tasker.cpp  thread.cpp
fractpp/src/main/: AndroidManifest.xml
fractpp/src/main/java/com/francescoz/fractpp/: FPPBridge.java  FPPConfig.java  FPPSurface.java
fractpp/src/main/res/values/: strings.xml
